feat: 添加版本检测和更新功能
refactor: 重构API和WebSocket URL构建逻辑

fix: 修复错误处理和类型检查

perf: 优化静态文件缓存控制

chore: 更新依赖版本至1.7.8

docs: 移除过时的截图文件

style: 清理无用代码和注释

test: 添加运行时服务测试用例

ci: 更新构建配置和过滤设置